# speechmarkdown-py

./: README.md  pyproject.toml
src/: SpeechMarkdown.py  SpeechMarkdownGrammar.py  SpeechMarkdownParser.py  SpeechOptions.py  __init__.py
src/formatters/: AmazonPollySsmlFormatter.py  AnazonPollyNeuralSsmlFornatter.py  FormatterBase.py  FormatterFactory.py  MicrosoftAzureSsmlFormatter.py  SSMLFormatterBase.py  TextFormatter.py  WitAiSsmlFormatter.py  __init__.py
src/utils/: tags_object.py
