[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "speech_markdown"
version = "0.1.0"
description = "A Python package to handle Speech Markdown formatting for various TTS services."
author = "Will Wade"
author_email = "wwade@acecentre.org.uk"

[tool.setuptools.dependencies]
install_requires = [
    "pyparsing>=2.4",
    "requests>=2.25" # Assuming you might need requests, specify actual dependencies
]

[tool.setuptools.scripts]
# Define any command-line scripts here

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''